# time_2d_inversible_automata

./: .gitignore  Cargo.toml  index.html
src/: lib.rs  main.rs
