[package]
name = "time_2d_inversible_automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
png = "0.16.8"
permutation_string = { path = "../permutation_string" }
color-backtrace = "0.5.0"
indicatif = "0.15.0"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
